// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
.c2 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c2:link,
.c2:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
  border-color: #004a7b;
}

.c2[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #fee5ad;
  border-color: #fdd57b;
  margin: 40px 0;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6>
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=456"
          rel="noopener noreferrer"
          target="_blank"
        >
          unknown convention
           (IDCC 
          idcc-unknown
          )
        </a>
      </h6>
      <div
        class="c1"
      >
        Désolé nous n'avons pas de réponse pour cette convention collective
      </div>
      <br />
      <br />
      <button
        class="c2"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
.c2 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c2:link,
.c2:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
  border-color: #004a7b;
}

.c2[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c1 {
  margin: 5px 0;
  list-style-type: none;
}

.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6>
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          idcc-preselected
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <h3>
        Références
      </h3>
      <h4>
        Convention collective
      </h4>
      <li
        class="c1"
      >
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference CC 1
        </a>
      </li>
      <h4>
        Autres sources
      </h4>
      <li
        class="c1"
      >
        <a
          href="http://path/to/ref"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference externe 1
        </a>
      </li>
      <br />
      <br />
      <button
        class="c2"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
.c1 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c1:link,
.c1:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c1:not([disabled]):hover,
.c1:not([disabled]):active,
.c1:not([disabled]):focus {
  color: #fff;
  background: #0068ae;
  border-color: #004a7b;
}

.c1[disabled] {
  color: rgba(255,255,255,0.4);
  cursor: not-allowed;
}

.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6>
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          idcc-preselected
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <br />
      <br />
      <button
        class="c1"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  width: 100%;
}

.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

.c2 {
  margin: 1.25rem 0;
  padding: 0.625rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div>
      <div
        class="c1 c2"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c3"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  width: 100%;
}

.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

.c2 {
  margin: 1.25rem 0;
  padding: 0.625rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit votre convention collective ?
    </h2>
    <div>
      <div
        class="c1 c2"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c3"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
.c8 {
  position: relative;
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 12px;
}

.c8::after,
.c8::before {
  position: absolute;
  top: 50%;
  display: block;
  width: 10px;
  height: 2px;
  background-color: currentColor;
  -webkit-transition: -webkit-transform 0.25s ease,-webkit-transform 0.25s ease;
  -webkit-transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  transition: transform 0.25s ease,-webkit-transform 0.25s ease;
  content: "";
}

.c8::before {
  left: 4px;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

[aria-expanded="true"] .c8::before,
[aria-selected="true"] .c8::before {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8::after {
  right: 4px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

[aria-expanded="true"] .c8::after,
[aria-selected="true"] .c8::after {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c6 + .c5 {
  border-top: 1px solid #c9d3df;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c7:hover,
.c7:focus,
.c7:focus-within,
.c7[aria-expanded="true"] {
  color: #005994;
}

.c9 {
  padding: 1rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c9.accordion__body--hidden {
  display: none;
}

.c11 {
  position: relative;
  overflow: hidden;
}

.c11:before,
.c11:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c11:before {
  left: -2rem;
}

.c11:after {
  right: -2rem;
}

.c12 {
  overflow-x: auto;
}

.c13 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-collapse: collapse;
  border-spacing: 0;
}

.c13 caption {
  padding: 0.625rem 0;
  font-style: italic;
  text-align: center;
}

.c13 td,
.c13 th {
  padding: 0.625rem 1rem;
  border: 1px solid #c9d3df;
}

.c13 thead,
.c13 tfoot {
  padding: 0.625rem 1rem;
  vertical-align: bottom;
  background: #f9f9fc;
}

.c13 tfoot {
  vertical-align: top;
}

.c4 {
  margin-bottom: 2rem;
}

.c10 {
  margin-bottom: 0.25rem;
}

.c3 {
  margin-bottom: 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin-bottom: 2rem;
}

.c0 {
  padding: 0.625rem 1.25rem;
  margin-bottom: 1.25rem;
}

<div>
  <section
    class="c0"
  >
    <h2>
      Que dit le code du travail ?
    </h2>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          Le contrat d'extra, ou contrat d'usage, est un contrat à durée déterminée particulier, qui permet à un employeur d'un secteur d'activité strictement défini d'augmenter son effectif en employant rapidement un extra. Ce contrat ne peut être  utilisé que pour répondre à des besoins ponctuels et immédiats pour un poste spécifique et limités dans le temps.
        </p>
        <div
          class="c4"
          data-accordion-component="Accordion"
        >
          <div
            class="c5 c6"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-0"
                aria-disabled="false"
                aria-expanded="false"
                class="c7"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-0"
                role="button"
                tabindex="0"
              >
                <h2>
                  Conditions de recours
                </h2>
                <div
                  class="c8"
                  role="presentation"
                />
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-0"
              class="c9"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-0"
            >
              <p>
                Un 
                CDD
                 d'usage peut être conclu s'il remplit les 3 condition suivantes :
              </p>
              <ul>
                <li
                  class="c10"
                >
                  <p>
                    un secteur d'activité qui autorise ce type de contrat ;
                  </p>
                </li>
                <li
                  class="c10"
                >
                  <p>
                    usage constant de ne pas recourir au contrat à durée indéterminée ;
                  </p>
                </li>
                <li
                  class="c10"
                >
                  <p>
                    la nature temporaire de l'emploi.
                  </p>
                </li>
              </ul>
              <p>
                le contrat d'extra est conclu pour la durée d'une mission  de quelques heures, d'une journée ou de plusieurs journées consécutives.
              </p>
              <p>
                Il ne faut pas confondre le contrat d'extra et le contrat à temps partiel : un salarié qui revient par exemple chaque semaine pour quelques heures dans l'entreprise n'est pas un extra, mais un salarié à temps partiel.
              </p>
              <p>
                L'extra est un salarié présent de manière occasionnelle et irrégulière.
              </p>
            </div>
          </div>
          <div
            class="c5 c6"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-1"
                aria-disabled="false"
                aria-expanded="false"
                class="c7"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-1"
                role="button"
                tabindex="0"
              >
                <h2>
                  Secteurs autorisés
                </h2>
                <div
                  class="c8"
                  role="presentation"
                />
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-1"
              class="c9"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-1"
            >
              <p>
                Dans certains secteurs d'activité où le 
                CDI
                 n'est pas un mode de recrutement traditionnellement utilisé, il est d'usage et légal de recourir au CDD, appelé 
                <i>
                  CDD d'usage constant
                </i>
                 ou 
                <i>
                  contrat d'extra
                </i>
                .
              </p>
              <p>
                En dehors des secteurs d'activité couverts par décret ou par une convention ou un accord collectif étendu, le recours au CDD d'usage n'est pas permis.
              </p>
              <div
                class="c11"
              >
                <div
                  class="c12"
                >
                  <table
                    class="c13"
                  >
                    <caption>
                      Domaines d'activité où le CDD ou l'intérim est l'usage
                    </caption>
                    <thead>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Secteurs d'activité
                        </th>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          CDD d'usage
                        </th>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Intérim
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Agences de voyage et tourisme
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Déménagement
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Services à la personne
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Non
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Hôtellerie, restauration
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Centre de loisirs et de vacances
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Activité foraine
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Non
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Sport professionnel
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Enseignement
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Spectacle
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Action culturelle
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Audiovisuel, production cinématographique, édition phonographique
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Exploitation forestière
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Réparation navale
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Information
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Enquêtes, sondages
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Entreposage et stockage de la viande
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Bâtiment et travaux publics pour les chantiers à l'étranger
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Coopération, assistance technique d'ingénierie et de recherche à l'étranger
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Recherche scientifique dans le cadre d'un accord international (convention, arrangement administratif)
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Assistance technique ou logistique dans les institutions internationales ou dans l'Union européenne prévu par les traités
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Non
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c5 c6"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-2"
                aria-disabled="false"
                aria-expanded="false"
                class="c7"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-2"
                role="button"
                tabindex="0"
              >
                <h2>
                  Conclusion et fin du contrat
                </h2>
                <div
                  class="c8"
                  role="presentation"
                />
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-2"
              class="c9"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-2"
            >
              <p>
                Comme tout autre CDD, le contrat d'extra ou CDD d'usage doit être établi par écrit et comporter la définition précise de son motif. À défaut, il est requalifié en CDI. 
              </p>
              <p>
                Un contrat doit être établi pour chaque vacation. 
              </p>
              <p>
                Le contrat d'extra peut être conclu pour un terme imprécis (il n'est pas limité dans sa durée) ; il doit alors comporter une durée minimale et prend fin avec la tâche pour laquelle il a été conclu. 
              </p>
              <p>
                Les formalités d'embauche sont identiques à celles des autres contrats de travail. Voir notre dossier 
                Formalités d'embauche.
              </p>
              <p>
                La fin du contrat d'extra ne donne pas droit à l'indemnité de précarité prévue pour d'autres types de CDD, sauf si une convention collective ou un accord collectif le prévoient.
              </p>
              <p>
                Un délai de carence n'est pas nécessaire en cas de succession de contrats avec un même salarié ou avec plusieurs salariés sur le même poste de travail. 
              </p>
            </div>
          </div>
          <div
            class="c5 c6"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-3"
                aria-disabled="false"
                aria-expanded="false"
                class="c7"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-3"
                role="button"
                tabindex="0"
              >
                <h2>
                  Rémunération et cotisations sociales
                </h2>
                <div
                  class="c8"
                  role="presentation"
                />
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-3"
              class="c9"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-3"
            >
              <p>
                Le salaire de l'extra ne peut pas être inférieur ni au minimum conventionnel de la catégorie professionnelle à laquelle il appartient, ni au montant de la rémunération que percevrait dans la même entreprise un salarié en CDI de qualification équivalente et occupant les mêmes fonctions.
              </p>
              <p>
                L'employé doit être payé à chacune de ses interventions.  Si plusieurs vacations sont effectuées au cours d'un mois civil, il est possible, avec l'accord écrit du salarié, de le payer à une fréquence différente (semaine, quinzaine), sans aller au-delà d'1 mois, sans que la nature juridique du contrat s'en trouve modifiée.
              </p>
              <p>
                Il est possible d'établir un seul bulletin de paie récapitulatif qui ventile toutes les vacations lorsque la durée du contrat est inférieur à 1 mois (y compris en cas de chevauchement sur 2 mois).
              </p>
              <p>
                Elle ne s'applique pas si le salarié est embauché en CDI à l'issue du contrat court.
              </p>
            </div>
          </div>
          <div
            class="c5 c6"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-4"
                aria-disabled="false"
                aria-expanded="false"
                class="c7"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-4"
                role="button"
                tabindex="0"
              >
                <h2>
                  Congés et durée du travail
                </h2>
                <div
                  class="c8"
                  role="presentation"
                />
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-4"
              class="c9"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-4"
            >
              <p>
                Le salarié n'a pas droit à des jours de congés.
              </p>
              <p>
                Mais, à la fin du contrat, il perçoit une indemnité de congés payés égale à 
                <strong>
                  10 %
                </strong>
                 de la rémunération totale brute perçue (quelle que soit la durée du contrat).
              </p>
              <p>
                La durée maximale est fixée par l'usage.
              </p>
              <p>
                L'employeur doit enregistrer sur un registre  l'horaire  individuel de chaque salarié et les périodes de travail réellement effectuées.
              </p>
              <p>
                Ce document doit être émargé par le salarié au moins 1 fois par semaine et tenu à la disposition de l'inspecteur de travail.
              </p>
              <p>
                Le salarié est tenu informé de ses droits acquis en matière de repos compensateur sur son bulletin de paie ou sur une fiche annexée qui indique pour le mois considéré :
              </p>
              <ul>
                <li
                  class="c10"
                >
                  <p>
                    le nombre d'heures supplémentaires effectuées ;
                  </p>
                </li>
                <li
                  class="c10"
                >
                  <p>
                    le nombre d'heures de repos compensateur auxquelles elles ouvrent droit ;
                  </p>
                </li>
                <li
                  class="c10"
                >
                  <p>
                    le nombre d'heures de repos attribuées.
                  </p>
                </li>
              </ul>
              <p>
                La durée de présence sur les lieux de travail (y compris les heures supplémentaires) ne peut pas dépasser :
              </p>
              <ul>
                <li
                  class="c10"
                >
                  <p>
                    une durée maximale par jour :
                  </p>
                  <ul>
                    <li
                      class="c10"
                    >
                      <p>
                        11 heures pour un cuisinier ;
                      </p>
                    </li>
                    <li
                      class="c10"
                    >
                      <p>
                        12 heures pour un veilleur de nuit ;
                      </p>
                    </li>
                    <li
                      class="c10"
                    >
                      <p>
                        11h30 pour un autre salarié.
                      </p>
                    </li>
                  </ul>
                </li>
                <li
                  class="c10"
                >
                  <p>
                    une durée maximale  hebdomadaire de 50 heures (en moyenne sur 12 semaines) ou de 52 heures (en durée absolue).
                  </p>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="c5 c6"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-5"
                aria-disabled="false"
                aria-expanded="false"
                class="c7"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-5"
                role="button"
                tabindex="0"
              >
                <h2>
                  Requalification en CDI
                </h2>
                <div
                  class="c8"
                  role="presentation"
                />
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-5"
              class="c9"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-5"
            >
              <p>
                Si la mission de l'extra dépasse 60 jours dans un trimestre dans le même établissement, son contrat peut être requalifié en CDI.
              </p>
              <p>
                Le salarié bénéficie d'une procédure accélérée pour le demander devant le bureau de jugement du conseil de prud'hommes (sans conciliation préalable). Le bureau  doit statuer au fond dans un délai d'1 mois suivant sa saisine.
              </p>
              <p>
                Lorsque le salarié voit sa demande de requalification acceptée, le contrat de travail est considéré comme étant à durée indéterminée dès l'origine. Le salarié a en outre droit à une indemnité de requalification égale au minimum à 1 mois de salaire.
              </p>
              <p>
                L'employeur encourt une amende de 
                <strong>
                  3 750 €
                </strong>
                , et  une amende de
                <strong>
                   7 500 €
                </strong>
                 et 6 mois d'emprisonnement en cas de récidive. Pour les personnes morales, l'amende est multipliée par 5 : soit, 
                <strong>
                  18 750 €
                </strong>
                , 
                <strong>
                  37 500 €
                </strong>
                 en cas de récidive.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
